\name{NEWS}
\title{NEWS file for the TraMineRextras package}

\section{Changes in version 0.7.2 [2021-06-21] (Development version)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqindic.dyn()} gains two arguments: \code{wstep} to control the spacing between successive windows and \code{endmiss.as.void} to control whether sequences end at first ending missing value or at the first void.
      \item
      \code{plot.dynin()} (plot method for objects produced by \code{seqindic.dyn}) can now plot series of summary values that end with missing values.
      \item
      \code{TSE_to_STS()} now checks that \code{tmin > 0}.
      \item
      \code{seqplot.rf()} returns (invisibly) group memberships.
    }
  }
  
  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{plot.dynin()} issue with check of \code{fstat}.
    }
  }
}


\section{Changes in version 0.6.1 [2021-01-20]}{
  \subsection{New functions}{
    \itemize{
      \item
      \code{seqindic.dyn()} dynamic individual indicator values.
      \item
      \code{plot.dynin()} plot method for \code{dynin} objects produced
      by \code{seqindic.dyn}.
      \item
      \code{seqpolyads()} degree of similarities between polyadic members
      (contributed by Tim Liao)
      \item
      \code{polyads} example data set.
    }
  }


  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqplot.tentrop()} default color now set using
      \code{qualitative_hcl} from \code{colorspace} with the \code{'Dark 3'} palette.
    }
  }
}

\section{Changes in version 0.6.0 [2020-04-24]}{
  \subsection{New functions}{
    \itemize{
      \item
      \code{seqCompare()} BIC and Likelihood ratio test (LRT) for comparing
        two sets of sequences.
      \item
      \code{seqLRT()} LRT for comparing two sets of sequences.
      \item
      \code{seqBIC()} BIC for comparing sequence data.
    }
  }

  \subsection{Changes in existing functions}{
    \itemize{