@@ -5,12 +5,14 @@
 
 \description{The function computes measures of the degree of similarities within polyadic member sequences compared to randomly assigned polyadic member sequences.}
 \usage{
-seqpolyads(seqlist, a=1, method="HAM", ..., w=rep(1,ncol(combn(1:length(seqlist),2))),
-              s=36963, T=1000, core=1, replace=TRUE, weighted=TRUE,
-              with.missing=FALSE, rand.weight.type=1, role.weights=NULL, show.time=FALSE)
+seqpolyads(seqlist, a=1, method="HAM", ..., 
+    w=rep(1,ncol(combn(1:length(seqlist),2))),
+    s=36963, T=1000, core=1, replace=TRUE, weighted=TRUE,
+    with.missing=FALSE, rand.weight.type=1, role.weights=NULL, 
+    show.time=FALSE)
 }
 \arguments{
-\item{seqlist}{A list of \var{J>1} state sequence \code{stslist} objects. List of input sets (polyads) of polyadic sequences. The state sequence objects in the list must all have the same number \var{N} of sequences and the same alphabet.  The state sequence objects should be created with \code{\link{seqdef}} and the list with \code{\link{list}}. E.g., \code{list(gen1.seq,gen2.seq,gen3.seq)}.
+\item{seqlist}{A list of \var{J>1} state sequence \code{stslist} objects. List of input sets (polyads) of polyadic sequences. The state sequence objects in the list must all have the same number \var{N} of sequences and the same alphabet.  The state sequence objects should be created with \code{\link{seqdef}} and the list with \code{\link{list}}. E.g., \code{list(gen1.seq,}\code{gen2.seq,}\code{gen3.seq)}}.
 }
 
 \item{a}{Integer, 1 or 2. Random generation mechanism. If 1 (default), draws from the observed set of sequences, and if 2, in addition random draws of states from each randomly drawn sequence. See reference below for detail.
